// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users API POST should create a new user 1`] = `
{
  "status": 1,
  "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MSwiZW1haWwiOiJ0ZXN0QGV4YW1wbGUuY29tIiwibmFtZSI6IlRlc3QgVXNlciIsImlhdCI6MTY4MTQ3MDI5OSwiZXhwIjoxNjgxNDczODk5fQ.VhgOLvceas9Cyfbqbmbhb8pCifekSowYqH4aiSWklMY",
}
`;

exports[`Users API POST should return a token for an existing user 1`] = `
{
  "status": 1,
  "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MiwiZW1haWwiOiJ0ZXN0QGV4YW1wbGUuY29tIiwiaWF0IjoxNjgxNDcwMzAwLCJleHAiOjE2ODE0NzM5MDB9.uQvY2REItP2pYKKeT99pjYzuchyC-LGUmGw7OjkJWPU",
}
`;
